remove / form image

--- a/Tokyo.html
+++ b/Tokyo.html
@@ -59,10 +59,10 @@
             <fieldset>
                 <legend><big><b>Exploring Tokyo's Nightlife: A Vibrant Journey Through the City That Never Sleeps
                             &#10084;</b></big></legend>
-                <img src="/image/t3.jpg" alt="Tokyo" width="380">
-                <img src="/image/ttower.jpg" alt="Tokyo" width="288">
-                <img src="/image/tttlast.jpg" alt="Tokyo" width="282">
-                <img src="/image/nowonlytk.jpg" alt="Tokyo" width="282">
+                <img src="image/t3.jpg" alt="Tokyo" width="380">
+                <img src="image/ttower.jpg" alt="Tokyo" width="288">
+                <img src="image/tttlast.jpg" alt="Tokyo" width="282">
+                <img src="image/nowonlytk.jpg" alt="Tokyo" width="282">
 
 
             </fieldset>
