--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/image/japaniconboy.webp">
+    <link rel="icon" href="image/japaniconboy.webp">
     <title>Japan Travel and Living Guide</title>
 </head>
 
@@ -35,9 +35,9 @@
                 <legend>
                     <h2>The Magic of Cherry Blossoms: Japan’s Springtime Beauty &#10084;</h2>
                 </legend>
-                <img src="/image/mount-fuji.jpg" alt="Kyoto" width="500">
-                <img src="/image/main1111111111.jpg" alt="mount-fuji" width="500">
-                <img src="/image/MAINFLOWER -.jpg" alt="Flower" width="233">
+                <img src="image/mount-fuji.jpg" alt="Kyoto" width="500">
+                <img src="image/main1111111111.jpg" alt="mount-fuji" width="500">
+                <img src="image/MAINFLOWER -.jpg" alt="Flower" width="233">
             </fieldset>
             <article>
                 <big> <b><u>About Cherry Blossoms in Japan (Sakura)</u></b> <span
@@ -98,10 +98,10 @@
         <section>
             <fieldset>
                 <legend><big><b>Japan for Couples: A Dreamy Escape with Your Soulmate &#10084;</b> </big></legend>
-                <span><img src="/image/maincplin.jpg" alt="Couples enjoy" width="300"> </span>
-                <span> <img src="/image/cppp1.jpg" alt="Couples enjoy" width="308"></span>
-                <span> <img src="/image/hanafuda.jpg" alt="Couples enjoy" width="308"></span>
-                <span> <img src="/image/kkkkkkkkk.jpg" alt="Couples enjoy" width="308"></span>
+                <span><img src="image/maincplin.jpg" alt="Couples enjoy" width="300"> </span>
+                <span> <img src="image/cppp1.jpg" alt="Couples enjoy" width="308"></span>
+                <span> <img src="image/hanafuda.jpg" alt="Couples enjoy" width="308"></span>
+                <span> <img src="image/kkkkkkkkk.jpg" alt="Couples enjoy" width="308"></span>
 
             </fieldset>
         </section>
