--- a/Tokyo.html
+++ b/Tokyo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tokyo – The Bustling Capital</title>
-    <link rel="icon" href="/image/iconjapan.jpg">
+    <link rel="icon" href="image/iconjapan.jpg">
 </head>
 
 <body>
